Annotation Axiom and Literal parsing